kube/mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-rds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: kube-rds
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        imagePullPolicy: Always
        ports:
        - name: tcp
          containerPort: 3306
        resources:
          limits:
            cpu: 1000m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 1024Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mysql-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kube-rds
  labels:
    app: mysql
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 32306
  selector:
    app: mysql
