kube/postgres-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-rds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: kube-rds
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        imagePullPolicy: Always
        ports:
        - name: tcp
          containerPort: 5432
        resources:
          limits:
            cpu: 1000m
            memory: 2048Mi
          requests:
            cpu: 500m
            memory: 1024Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgres-claim

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kube-rds
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 32333
  selector:
    app: postgres
