kube/sonar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: kube-ops
  labels:
    app: sonarqube
spec:
  selector:
    matchLabels:
      app: sonarqube
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:latest
        ports:
        - name: http
          containerPort: 9000
        volumeMounts:
        - name: data
          mountPath: /opt/sonarqube/conf
          subPath: conf
        - mountPath: /opt/sonarqube/data
          name: data
          subPath: data
        - mountPath: /opt/sonarqube/extensions
          name: data
          subPath: extensions
        - mountPath: /opt/sonarqube/logs
          name: data
          subPath: logs
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sonar-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sonar
  namespace: kube-ops
  labels:
    app: sonarqube
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  selector:
    app: sonarqube
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sonar
  namespace: kube-ops
spec:
  rules:
  - host: sonar.i.com 
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: sonar
            port:
              name: http
