kube/torna-deployment.yaml
# --------------------------- Deployment ------------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torna-deployment
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: torna
      tier: backend
      version: 1.0.0
  replicas: 1
  template:
    metadata:
      labels:
        app: torna
        tier: backend
        version: 1.0.0
    spec:
      containers:
        - name: torna
          image: tanghc2020/torna:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: torna-config
            mountPath: /torna/config/application.properties
            readOnly: true
            subPath: application.properties
          ports:
            - containerPort: 7700
          resources:
            limits:
              memory: 4Gi
              cpu: '4.0'
            requests:
              memory: 2Gi
              cpu: '2.0'
      terminationGracePeriodSeconds: 30
      volumes:
      - name: torna-config
        configMap:
          defaultMode: 0600
          name: torna-config
      imagePullSecrets:
      - name: harbor-key
---
# --------------------------- Service ---------------------- #
apiVersion: v1
kind: Service
metadata:
  name: torna-svc
  namespace: kube-ops
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7700
      targetPort: 7700
  selector:
    app: torna
    tier: backend
    version: 1.0.0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-torna
  namespace: kube-ops
  
spec:
  rules:
  - host: apidocs.meb.im 
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: torna-svc
            port:
              name: http
